# smart-home-slack

./: Cargo.toml
.github/workflows/: rust.yml
src/: config.rs  main.rs  slack.rs  wol.rs
src/slack/: wol.rs
