[package]
name = "smart-home-slack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.5"
ws = "0.9.1"
websocket = "0.26.2"
wake-on-lan = "0.2.0"
regex = "1.5.4"
hex = "0.4.3"
tokio = {version="*", features = ["full"]}
serde_json = "*"
url = "2.2.2"